[package]
name = "chetter-app"
version = "0.0.3"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
getopts = "0.2"
jsonwebtoken = "9.1"
octocrab = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.3", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.12"
