[package]
name = "chetter-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
async-trait = "0.1"
axum = "0.6"
getopts = "0.2"
indoc = "2"
jsonwebtoken = "9.1"
octocrab = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.3", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"]}
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.12"
